Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </header>
       <section>
         <h1>
-<a id="i-majored-in-computer-engineering-at-nsit-delhi-and-worked-in-analytics-at-mu-sigma" class="anchor" href="#i-majored-in-computer-engineering-at-nsit-delhi-and-worked-in-analytics-at-mu-sigma" aria-hidden="true"><span class="octicon octicon-link"></span></a>I majored in computer engineering at <a href="http://www.nsit.ac.in/">NSIT-Delhi</a> and worked in analytics at Mu Sigma.</h1>
+<a id="i-majored-in-computer-engineering-at-nsit-delhi-and-worked-in-analytics-at-mu-sigma" class="anchor" href="#i-majored-in-computer-engineering-at-nsit-delhi-and-worked-in-analytics-at-mu-sigma" aria-hidden="true"><span class="octicon octicon-link"></span></a>I majored in computer engineering at <a href="http://www.nsit.ac.in/">NSIT-Delhi</a> and worked in analytics at Mu Sigma</h1>
 
-<p>I did my schooling from <a href="http://www.davvasantkunj.org/">DAV Public School</a> ,Vasant kunj,New Delhi
+<p>I have keen interest in technology and products. 
+I did my schooling from <a href="http://www.davvasantkunj.org/">DAV Public School</a> ,Vasant kunj,New Delhi
 My <a href="https://www.facebook.com/sunnykumar.maurya.1?ref=tn_tnmn">facebook profile</a>.
 Follow me on <a href="https://twitter.com/sunnykmaurya">twitter</a>.
 Connect with me on <a href="http://in.linkedin.com/pub/sunny-kumar-maurya/23/670/760">Linkedin</a>.</p>
